# nbsdk

./: CMakeLists.txt
base/: CMakeLists.txt  critical_section.cc  event_loop.cc  nlog.cc  platform.cc
base/include/: critical_section.h  event_loop.h  macros.h  nlog.h  platform.h  smart_pointer.h
math/: CMakeLists.txt  fft_factory.cc  fftw.cc  fftw.h  gcc_phat.cc  ifftw.cc  ifftw.h
math/include/: fft.h  fft_factory.h  gcc_phat.h
memery/: CMakeLists.txt  fifo_buffer.cc
memery/include/: buffer.h  fifo_buffer.h
net/: CMakeLists.txt
net/http/: http_call.cc  http_client.cc  http_request.cc  http_response.cc  http_url.cc
net/include/: http_call.h  http_client.h  http_defines.h  http_request.h  http_response.h  http_url.h  messenger_factory.h  messenger_interface.h
net/messenger/: messenger_factory.cc  websocket_messenger.cc  websocket_messenger.h  websocket_session.cc  websocket_session.h
test/: AudioCapture.h  AudioFrame.h  CMakeLists.txt  Frame.h  main.cc  xmos_capture.cc  xmos_capture.h  xmos_doa.cc  xmos_doa.h  xmos_frame.cc  xmos_frame.h
